# raspberrypi-rocket-rust-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.debian  Dockerfile.scratch  README.md  Rocket.toml  test.ipynb
app/: Cargo.toml
app/src/: controller.rs  state.rs  task.rs
src/: controller.rs  experiment.rs  main.rs  state.rs
tests/: test.ipynb
