[package]
name = "rust-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serialport = "4.0.1"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]